--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <img src="assets/img/ball01.png" alt="ball01" class="ball1" />
+      <img src="assets/img/ball02.png" alt="ball01" class="ball2" />
+    </div>
+  </body>
 </html>
